--- a/Lands/Lands/Views/LoginPage.xaml
+++ b/Lands/Lands/Views/LoginPage.xaml
@@ -4,9 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Lands.Views.LoginPage"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
-    Title="Lands">
+    Title="Login">
     <ContentPage.Content>
-        <ScrollView>
+        <ScrollView
+            BindingContext="{Binding Login}">
             <StackLayout
                 Padding="5">
                 <Image
@@ -14,7 +15,8 @@
                     WidthRequest="200">
                 </Image>
                 <Grid
-                    Margin="10,0">
+                    Margin="10,0"
+                    VerticalOptions="CenterAndExpand">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="2*"/>
@@ -29,6 +31,7 @@
                         Grid.Row="0"
                         Grid.Column="1"
                         Keyboard="Email"
+                        Text="{Binding Email, Mode=TwoWay}"
                         Placeholder="Enter your email...">
                     </Entry>
                     <Label
@@ -40,38 +43,47 @@
                     <Entry
                         Grid.Row="1"
                         Grid.Column="1"
-                        IsPassword="True"
+                        IsPassword="True"                        
+                        Text="{Binding Password, Mode=TwoWay}"
                         Placeholder="Enter your password...">
                     </Entry>
                 </Grid>
-                <ActivityIndicator>
+                <ActivityIndicator
+                    IsRunning="{Binding IsRunning, Mode=TwoWay}"
+                    VerticalOptions="CenterAndExpand">
                 </ActivityIndicator>
                 <StackLayout
                     Margin="10,0"
-                    Orientation="Horizontal">
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
                     <Label
                         HorizontalOptions="StartAndExpand"
                         Text="Rememberme on this device"
                         VerticalOptions="Center">
                     </Label>
                     <Switch
+                        IsToggled="{Binding IsRemembered, Mode=TwoWay}"
                         HorizontalOptions="End">
                     </Switch>
                 </StackLayout>
                 <Label
                     HorizontalOptions="Center"
                     Text="Forgot your password?"
-                    TextColor="Blue">
+                    TextColor="Blue"
+                    VerticalOptions="CenterAndExpand">
                     
                 </Label>
                 <StackLayout
                     Margin="40,0"
-                    Orientation="Horizontal">
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
                     <Button
                         BackgroundColor="Navy"
                         BorderRadius="23"
+                        Command="{Binding LoginCommand}"
                         HeightRequest="46"
                         HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                         Text="Login"
                         TextColor="White">
                     </Button>
@@ -79,17 +91,22 @@
                         BackgroundColor="Purple"
                         BorderRadius="23"
                         HeightRequest="46"
-                        HorizontalOptions="FillAndExpand"
+                        HorizontalOptions="FillAndExpand"                     
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                         Text="Register"
                         TextColor="White">
                     </Button>
                 </StackLayout>
                 <StackLayout
                     HorizontalOptions="Center"
-                    Orientation="Horizontal">
+                    Orientation="Horizontal"
+                    VerticalOptions="EndAndExpand">
                     <Image
                         Source="facebook_logo"
                         WidthRequest="100">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding LoginFacebookCommand}"/>
+                        </Image.GestureRecognizers>
                     </Image>
                     <Image
                         Source="twitter_logo"
